--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Support</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="https://testdeveloper1234.github.io/Prabashwara.github.io/ target="_blanck" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="https://t.me/Imprabashwara target="_blanck" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="https://t.me/ankivectorupdates target="_blanck" class="nav__link">Support</a></li>
+                        <li class="nav__item"><a href="# target="_blanck" class="nav__link">Blog</a></li>
+                        <li class="nav__item"><a href="https://t.me/Imprabashhelpbot target="_blanck" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
@@ -56,25 +56,25 @@
 
                 <div class="social-iconlol">
                     <div class="imglol">
-                            <i class='bx bxl-telegram skills__icon' ></i>
+                            <a href="https://t.me/Imprabashhelpbot" target="_blanck"><i class='bx bxl-telegram skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-facebook-circle skills__icon' ></i>
+                            <a href="#" target="_blanck"><i class='bx bxl-facebook-circle skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-instagram skills__icon' ></i>
+                            <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><i class='bx bxl-instagram skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-github skills__icon' ></i>
+                            <a href="https://github.com/WKRPrabashwara" target="_blanck"><i class='bx bxl-github skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-twitch skills__icon' ></i>
+                            <a href="#" target="_blanck"><i class='bx bxl-twitch skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-twitter skills__icon' ></i>
+                            <a href="#" target="_blanck"><i class='bx bxl-twitter skills__icon' ></i></a>
                         </div>
                         <div class="imglol">
-                            <i class='bx bxl-google skills__icon' ></i>
+                            <a href="https://wkprabashwara@gmail.com" target="_blanck"><i class='bx bxl-google skills__icon' ></i></a>
                         </div>
                 </div>
 
