--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="https://testdeveloper1234.github.io/Prabashwara.github.io/ target="_blanck" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="https://t.me/Imprabashwara target="_blanck" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="https://t.me/ankivectorupdates target="_blanck" class="nav__link">Support</a></li>
-                        <li class="nav__item"><a href="# target="_blanck" class="nav__link">Blog</a></li>
-                        <li class="nav__item"><a href="https://t.me/Imprabashhelpbot target="_blanck" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="https://testdeveloper1234.github.io/Prabashwara.github.io/" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="https://t.me/Imprabashwara" target="_blanck" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="https://t.me/ankivectorupdates" target="_blanck" class="nav__link">Support</a></li>
+                        <li class="nav__item"><a href="#" target="_blanck" class="nav__link">Blog</a></li>
+                        <li class="nav__item"><a href="https://t.me/Imprabashhelpbot" target="_blanck" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
