--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                     <span class="home__skill anime-text">#Developer</span>
                     
                     <div>
-                        <a href="#" class="home__button anime-text">CONTACT ME</a>
+                        <a https://t.me/ImPrabashhelpbot" target="_blanck" class="home__button anime-text">CONTACT ME</a>
                     </div>
                 </div>
                 
                 <div class="text-box">
                 <div class="row">
                     <a href="https://github.com/WKRPrabashwara" target="_blanck">Explore My Tools</a>
-                    <a href="https://t.me/ImPrabash_bot" target="_blanck">Connect With Me</a>
+                    <a href="https://t.me/ImPrabashhelpbot" target="_blanck">Connect With Me</a>
                 </div>
                 </div>
 
