--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="home__skill anime-text">#Developer</span>
                     
                     <div>
-                        <a https://t.me/ImPrabashhelpbot" target="_blanck" class="home__button anime-text">CONTACT ME</a>
+                        <a href="https://t.me/ImPrabashhelpbot" target="_blanck" class="home__button anime-text">CONTACT ME</a>
                     </div>
                 </div>
                 
