--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- MAIN -->
         <main class="l-main bd-grid">
             <div class="home">
+                <img src="./home__img.png" alt="banner-img" class="home__img">
                 <div class="home__information">
                     <span class="home__pressent anime-text">Hello, My name is</span>
                     <h1 class="home__title anime-text">Rivibibu Prabashwara</h1>
@@ -53,31 +54,28 @@
                 </div>
                 </div>
 
-
-                <div class="social-iconlol">
+                <div class="socialiconlol">
                     <div class="imglol">
-                            <a href="https://t.me/Imprabashhelpbot" target="_blanck"><i class='bx bxl-telegram skills__icon' ></i></a>
+                            <a href="https://t.me/Imprabashbot" target="_blanck"><img src="./telegram.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="#" target="_blanck"><i class='bx bxl-facebook-circle skills__icon' ></i></a>
+                            <a href="#" target="_blanck"><img src="./facebook.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><i class='bx bxl-instagram skills__icon' ></i></a>
+                            <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="./instagram.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="https://github.com/WKRPrabashwara" target="_blanck"><i class='bx bxl-github skills__icon' ></i></a>
+                            <a href="https://github.com/WKRPrabashwara" target="_blanck"><img src="./github.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="#" target="_blanck"><i class='bx bxl-twitch skills__icon' ></i></a>
+                            <a href="#" target="_blanck"><img src="./twich.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="#" target="_blanck"><i class='bx bxl-twitter skills__icon' ></i></a>
+                            <a href="#" target="_blanck"><img src="./twitter.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="https://wkprabashwara@gmail.com" target="_blanck"><i class='bx bxl-google skills__icon' ></i></a>
-                        </div>
-                </div>
-
+                            <a href="https://wkprabashwara@gmail.com" target="_blanck"><img src="./email.png"></a>
+                    </div>
             </div>
         </main>
 
