--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
-        <title>Rivibibu Prabashwara</title>
+        <title>Rivibibu Prabashwara's Personal Website</title>
         <link rel="shortcut icon" type="image/png" href="./favicon.png">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     </head>
@@ -19,11 +19,11 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="https://testdeveloper1234.github.io/Prabashwara.github.io/" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="https://t.me/Imprabashwara" target="_blanck" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="https://t.me/ankivectorupdates" target="_blanck" class="nav__link">Support</a></li>
+                        <li class="nav__item"><a href="https://prabashwarax.github.io/Prabashwara.github.io/" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#" target="_blanck" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#" target="_blanck" class="nav__link">Support</a></li>
                         <li class="nav__item"><a href="#" target="_blanck" class="nav__link">Blog</a></li>
-                        <li class="nav__item"><a href="https://t.me/Imprabashhelpbot" target="_blanck" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="https://prabashwara.info@gmail.com" target="_blanck" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
@@ -43,38 +43,32 @@
                     <span class="home__skill anime-text">#Developer</span>
                     
                     <div>
-                        <a href="https://t.me/ImPrabashhelpbot" target="_blanck" class="home__button anime-text">CONTACT ME</a>
+                        <a href="https://prabashwara.info@gmail.com" target="_blanck" class="home__button anime-text">CONTACT ME</a>
                     </div>
                 </div>
                 
                 <div class="text-box">
                 <div class="row">
-                    <a href="https://github.com/WKRPrabashwara" target="_blanck">Explore My Tools</a>
-                    <a href="https://t.me/ImPrabashhelpbot" target="_blanck">Connect With Me</a>
+                    <a href="https://github.com/PrabashwaraX" target="_blanck">Explore My Tools</a>
+                    <a href="https://prabashwara.info@gmail.com" target="_blanck">Connect With Me</a>
                 </div>
                 </div>
 
                 <div class="socialiconlol">
-                    <div class="imglol">
-                            <a href="https://t.me/Imprabashbot" target="_blanck"><img src="./telegram.png"></a>
-                        </div>
-                        <div class="imglol">
-                            <a href="#" target="_blanck"><img src="./facebook.png"></a>
-                        </div>
                         <div class="imglol">
                             <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="./instagram.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="https://github.com/WKRPrabashwara" target="_blanck"><img src="./github.png"></a>
+                            <a href="https://github.com/PrabashwaraX" target="_blanck"><img src="./github.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="#" target="_blanck"><img src="./twich.png"></a>
+                            <a href="https://www.twitch.tv/prabashwara_" target="_blanck"><img src="./twich.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="#" target="_blanck"><img src="./twitter.png"></a>
+                            <a href="https://twitter.com/Prabashwara_" target="_blanck"><img src="./twitter.png"></a>
                         </div>
                         <div class="imglol">
-                            <a href="https://wkprabashwara@gmail.com" target="_blanck"><img src="./email.png"></a>
+                            <a href="https://prabashwara.info@gmail.com" target="_blanck"><img src="./email.png"></a>
                     </div>
             </div>
         </main>
