--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
         <title>Rivibibu Prabashwara's Personal Website</title>
-        <link rel="shortcut icon" type="image/png" href="./favicon.png">
+        <link rel="shortcut icon" type="image/png" href="favicon.png">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>       
@@ -55,6 +55,9 @@
                 </div>
 
                 <div class="socialiconlol">
+                        <div class="imglol">
+                            <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="https://img.icons8.com/ios/50/000000/developer--v1.png"/></a>
+                        </div>
                         <div class="imglol">
                             <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="./instagram.png"></a>
                         </div>
