--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="socialiconlol">
                         <div class="imglol">
-                            <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="https://img.icons8.com/ios-glyphs/30/000000/developer.png"/></a>
+                            <a href="https://developers.google.com/profile/u/Prabashwara_" target="_blanck"><img src="https://img.icons8.com/ios-glyphs/30/000000/developer.png"/></a>
                         </div>
                         <div class="imglol">
                             <a href="https://www.instagram.com/invites/contact/?i=1b2go87mx2hh6&utm_content=muwrp81" target="_blanck"><img src="./instagram.png"></a>
