--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
         <title>Rivibibu Prabashwara's Personal Website</title>
-        <link rel="shortcut icon" type="image/png" href="./favicon.png">
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>       
